--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"> </script>
 
+
     <script type="text/javascript">
         (function () {
             emailjs.init("U7tCHWLeCTfPsU3fp");
@@ -30,9 +31,9 @@
     <!-- ✅ Robots for indexing -->
     <meta name="robots" content="index, follow">
 
-    <!-- ✅ Box icon -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href='https://unpkg.com/boxicons@2.1.4/dist/boxicons.js' rel='stylesheet'>
+     <!-- ✅ Box icon -->
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
+    <!-- <link href='https://unpkg.com/boxicons@2.1.4/dist/boxicons.js' rel='stylesheet'> -->
 
     <!-- ✅ Canonical link -->
     <link rel="canonical" href="https://sakthivel-app.wep.app/">
@@ -68,46 +69,47 @@
 
 
     <!-- loader -->
-<!-- Page loader overlay -->
-<div id="page-loader" aria-hidden="false" role="status">
-  <div class="loader-inner" aria-hidden="true">
-    <!-- SVG animated loader -->
-    <svg class="loader-svg" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Loading">
-      <defs>
-        <!-- Gradient: accent blue -> light green -->
-        <linearGradient id="loaderGradient" x1="0%" y1="0%" x2="100%" y2="100%">
-          <stop offset="0%" stop-color="var(--color-accent)" />
-          <stop offset="100%" stop-color="#7BE495" />
-        </linearGradient>
+    <!-- Page loader overlay -->
+    <div id="page-loader" aria-hidden="false" role="status">
+        <div class="loader-inner" aria-hidden="true">
+            <!-- SVG animated loader -->
+            <svg class="loader-svg" viewBox="0 0 120 120" xmlns="http://www.w3.org/2000/svg" role="img"
+                aria-label="Loading">
+                <defs>
+                    <!-- Gradient: accent blue -> light green -->
+                    <linearGradient id="loaderGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                        <stop offset="0%" stop-color="var(--color-accent)" />
+                        <stop offset="100%" stop-color="#7BE495" />
+                    </linearGradient>
 
-        <!-- A soft glow for the ring -->
-        <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
-          <feGaussianBlur stdDeviation="3.5" result="coloredBlur"/>
-          <feMerge>
-            <feMergeNode in="coloredBlur"/>
-            <feMergeNode in="SourceGraphic"/>
-          </feMerge>
-        </filter>
-      </defs>
+                    <!-- A soft glow for the ring -->
+                    <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
+                        <feGaussianBlur stdDeviation="3.5" result="coloredBlur" />
+                        <feMerge>
+                            <feMergeNode in="coloredBlur" />
+                            <feMergeNode in="SourceGraphic" />
+                        </feMerge>
+                    </filter>
+                </defs>
 
-      <!-- Background faint circle -->
-      <circle cx="60" cy="60" r="44" fill="none" stroke="rgba(255,255,255,0.06)" stroke-width="10"/>
+                <!-- Background faint circle -->
+                <circle cx="60" cy="60" r="44" fill="none" stroke="rgba(255,255,255,0.06)" stroke-width="10" />
 
-      <!-- Animated gradient ring -->
-      <g filter="url(#glow)">
-        <circle class="ring" cx="60" cy="60" r="44" fill="none" stroke="url(#loaderGradient)"
-                stroke-width="10" stroke-linecap="round" stroke-dasharray="260" stroke-dashoffset="80"/>
-      </g>
+                <!-- Animated gradient ring -->
+                <g filter="url(#glow)">
+                    <circle class="ring" cx="60" cy="60" r="44" fill="none" stroke="url(#loaderGradient)"
+                        stroke-width="10" stroke-linecap="round" stroke-dasharray="260" stroke-dashoffset="80" />
+                </g>
 
-      <!-- Orbit wrapper for the dot -->
-      <g class="orbit">
-        <circle cx="60" cy="16" r="5" fill="url(#loaderGradient)" />
-      </g>
-    </svg>
+                <!-- Orbit wrapper for the dot -->
+                <g class="orbit">
+                    <circle cx="60" cy="16" r="5" fill="url(#loaderGradient)" />
+                </g>
+            </svg>
 
-    <div class="loader-text">Loading...</div>
-  </div>
-</div>
+            <div class="loader-text">Loading...</div>
+        </div>
+    </div>
 
 
     <!-- Navigation -->
